force-app/main/default/objects/Test_Drive_Slot__c/Test_Drive_Slot__c.object-meta.xml
<CustomObject>
    <description>Pre-generated availability for Electra dealer test drives. FK target for Schedule_Test_Drive flow - agent must validate against this rather than fabricate times.</description>
    <label>Test Drive Slot</label>
    <nameField>
        <displayFormat>TDS-{0000}</displayFormat>
        <label>Slot Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drive Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>