force-app/main/default/objects/Test_Drive_Slot__c/fields/Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Booked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lead who has booked this test drive slot.</description>
    <label>Booked By Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Booked Test Drive Slots</relationshipLabel>
    <relationshipName>Booked_Test_Drive_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>