force-app/main/default/objects/Test_Drive_Slot__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Electra dealer location where this test drive slot is available.</description>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Electra Test Drive Slots</relationshipLabel>
    <relationshipName>Electra_Test_Drive_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>