force-app/main/default/objects/Test_Drive_Slot__c/fields/Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Duration_Min__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Duration of the test drive slot in minutes.</description>
    <label>Duration (min)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>