force-app/main/default/objects/Test_Drive_Slot__c/fields/Slot_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Slot_DateTime__c</fullName>
    <description>Date and time when this test drive slot is available.</description>
    <label>Slot Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>