force-app/main/default/objects/Test_Drive_Slot__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The vehicle model available for this test drive slot.</description>
    <label>Vehicle Model</label>
    <referenceTo>Vehicle_Model__c</referenceTo>
    <relationshipLabel>Test Drive Slots</relationshipLabel>
    <relationshipName>Test_Drive_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>