force-app/main/default/objects/Test_Drive_Slot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Slot_DateTime__c</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>Dealer__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>